k8s/applications/discovery/service.yml
apiVersion: v1
kind: Service
metadata:
  name: discovery
  labels:
    env: production
    tier: backend
    app: discovery
    name: discovery-service
spec:
  selector:
    env: production
    tier: backend
    app: discovery
    name: discovery-pod
  type: NodePort
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
      nodePort: 30002
