k8s/applications/discovery/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-00cbff553eb8318ef, subnet-034bd15305a16c645 # only private subnets
  labels:
    env: production
    tier: backend
    app: discovery
    name: discovery-ingress
spec:
  ingressClassName: alb
  rules:
#    - host: <백엔드 유레카 서버 도메인> # TODO
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discovery
                port:
                  number: 8761
